--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import "./components/modal-window";
 @import "./components/modal-form";
 @import "./components/menu";
+@import "./components/logo";
 
 // LAYOUT
 @import "./layout/header";
